<resources>
    <string name="app_name">Trainee\'s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="トレーニーズ">トレーニーズ</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="newlogin">新規登録</string>
    <string name="login">ログイン</string>
    <string name="homeBT">homeBT</string>
    <string name="searchBT">searchBT</string>
    <string name="menuBT">menuBT</string>
    <string name="mypageBT">mypageBT</string>
    <string name="backBT">backBT</string>
    <string name="settingBT">settingBT</string>
    <string name="commentBT">commentBT</string>
    <string name="postButton">投稿</string>
    <string name="title">タイトル</string>
    <string name="title_add">タイトル(必須)</string>
    <string name="goal">目的・目標</string>
    <string name="Menu">メニュー</string>
    <string name="menu_add">メニュー(必須)</string>
    <string name="Memo">メモ</string>
    <string name="comment">コメント</string>
    <string name="comment_add">コメント(必須)</string>
    <string name="memo_hint">ご自由にお書きください</string>
    <string name="main_hint">メニュー一覧</string>
    <string name="decided">決定</string>
    <string name="proicon">proicon</string>
    <string name="profileimage">プロフィール画像</string>
    <string name="nickname">ニックネーム</string>
    <string name="nickname_add">ニックネーム(必須)</string>
    <string name="selfintro">自己紹介</string>
    <string name="Delete">削除</string>
    <string name="Add">追加</string>
    <string name="Start">実行</string>
    <string name="Training">トレーニング名</string>
    <string name="Training_add">トレーニング名(必須)</string>
    <string name="Weight">重さ</string>
    <string name="Count">回数</string>
    <string name="Time">時間</string>
    <string name="End">終了</string>
    <string name="Change">編集</string>
    <string name="Details">詳細</string>
    <string name="Details_add">詳細(1つ以上にチェックをして入力してください)</string>
    <string name="Next">nextview</string>
    <string name="search_hint">キーワードを入力</string>
    <string name="addBT">メニューから追加</string>
    <string name="change_profile">プロフィール編集</string>
    <string name="change_password">パスワード変更</string>
    <string name="change_email">メールアドレス変更</string>
    <string name="sign_out">サインアウト</string>
    <string name="delete_account">アカウント削除</string>
    <string name="Arrow">矢印</string>
</resources>